[26/05/07]
1. ProtocolHandler, AbstractProtocolHandler and ProtocolConfiguration classes
are added.
2. Configuration layer completed.
3 added schema for itr-mappming and navigation
4. implemented NavigationService.
5. completed visitor / response flow.